2009-10-26 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-xml-reader.c (add_message):
	Use XML markup to print messages embedding XML tags.

	* src/nact/nact-assistant-export.ui:
	Make the Export assistant be transient relatively to main window.
	Make the Import assistant be transient relatively to main window.

	Fix crash when running Export assistant.

	* src/nact/nact-tree-model.c:
	* src/nact/nact-tree-model.h
	(nact_tree_model_new, nact_tree_model_runtime_init_dnd):
	Takes a NactWindow as argument instead of NactMainWindow.

	* src/nact/nact-iactions-list.c
	(nact_iactions_list_initial_load, nact_iactions_list_runtime_init):
	Updated accordingly.

	* src/nact/nact-main-window.c (register_type):
	No more implements the NAIPrefs interface (moved to NactWindow).

	* src/nact/nact-window.c (register_type):
	Implements NAIPrefs interface.

	* src/nact/nact-assistant-export.ui:
	* src/nact/nautilus-actions-config-tool.ui:
	Remove terminating dot from radio button labels.

	* src/common/na-about.c (na_about_display):
	Do not mark authors names and emails for translating (#599520).

	* configure.ac: Bump version number to 1.12.3.

2009-10-20 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac: Bump version number.

	* src/nact/nact-iaction-tab.c (on_icon_browse):
	Fix widget name.

2009-10-19 Pierre Wieser <pwieser@trychlos.org>

	* NEWS: Updated.

	* src/nact/nact-imenubar.c:
	Remove New menu and Preferences cross-references.

	* src/nact/nact-window.c (nact_window_signal_connect):
	Check GObject validity.

2009-10-14 Pierre Wieser <pwieser@trychlos.org>

	* src/nact/nact-window.c (instance_dispose):
	Only disconnect not null handlers.

	* src/nact/nact-main-window.c (get_selected_object):
	Only returns an object when selection is unique.

	* src/nact/nact-imenubar.c:
	* src/nact/nautilus-actions-config-tool.actions:
	Remove New menu and Preferences items.

	* po/POTFILES.in:
	* src/nact/Makefile.am:
	New file src/nact/nact-assistant-export.ui.
