@@ -42,6 +42,8 @@
 #include <common/na-xml-names.h>
 #include <common/na-xml-writer.h>
 
+#include "console-utils.h"
+
 /*static gchar     *output_fname = NULL;
 static gboolean   output_gconf = FALSE;*/
 static gboolean   output_stdout = FALSE;
@@ -69,6 +71,7 @@ main( int argc, char** argv )
 	gchar *msg = NULL;
 
 	g_type_init();
+	console_init_log_handler();
 
 	context = init_options();
 
